Bug 1279859 - Correctly skip over extra image sub blocks in the GIF decoder. r=njn